--- a/todo.html
+++ b/todo.html
@@ -28,6 +28,14 @@
 			<div id="tasks"></div>
 		</section>
 	</main>
+	<footer><p>Abduvohidov Xayrulloh</p></footer>
 	<script src="todo.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
